# gdg_chama_arbitrator

./: AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  testing.md
agents/: query_decomposer.py
agents/tools/: financial_analyst.py  vector_search.py
app/: config.py  main.py
components/: hybrid_retriever.py
data/: chama_db.json  chama_statements.csv
docs/: api-reference.md  architecture.md  deployment.md
evaluation/: golden_dataset.json  offline_eval.py
frontend/: app.py
observability/: cost_tracker.py
prompts/: registry.py  templates.py
scripts/: healthcheck.py  migrate.py  seed.py
security/: input_guard.py
services/: conversation.py  query_router.py
src/chama_arbitrator/: SRC_STRUCTURE.md  __init__.py  main.py
src/chama_arbitrator/agents/: __init__.py  adaptive_router.py  document_grader.py
src/chama_arbitrator/agents/tools/: __init__.py  (+2 more)
src/chama_arbitrator/api/: __init__.py  app.py
src/chama_arbitrator/app/: Dockerfile  main.py  models.py
src/chama_arbitrator/components/: __init__.py  reranker.py
src/chama_arbitrator/evaluation/: online_monitor.py
src/chama_arbitrator/frontend/: Dockerfile  __init__.py  app.py
src/chama_arbitrator/observability/: __init__.py  feedback.py  tracer.py
src/chama_arbitrator/prompts/: __init__.py  registry.py  templates.py
src/chama_arbitrator/security/: __init__.py  content_filter.py  output_filter.py
src/chama_arbitrator/services/: __init__.py  query_rewriter.py  query_router.py  rag_pipeline.py  semantic_cache.py
tests/: test_cache.py  test_retrieval.py  test_routing.py
