[project]
name = "production-chama-arbitrator"
version = "0.1.0"
description = "AI-powered arbitration system for Chamas (cooperative societies)"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "google-cloud-aiplatform",
    "langchain",
    "openai",
    "chromadb",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chama_arbitrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
